# amll-ttml-api

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  api.md  openapi.yaml  wrangler.toml
src/: lib.rs
src/api/: mod.rs
src/api/get/: extractor.rs  handler.rs
src/api/search/: extractor.rs  handler.rs
src/api/shared/: dto.rs
src/core/: error.rs  models.rs  repository.rs
src/services/: github_fetcher.rs  lyric_service.rs  mod.rs
src/utils/: cors.rs  http.rs  matcher.rs  mod.rs  string.rs
