[package]
name = "amll-ttml-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-lock = "3.4.2"
compact_str = { version = "0.9.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
worker = "0.8.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

future_not_send = "allow"
missing_errors_doc = "allow"
